--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="column-container 1">           
                 <div class="column">
                     <h3>Dia 1</h3>
-                    <p>Lunes: 11 km Trail Parque de Montaña. </p>
+                    <p>Miércoles: 11 km Trail Parque de Montaña. </p>
                     <p>  -1 km de menor a mayor, por senderos bajos. </p>
                     <p>  -3 km Llorón subiendo fuerte adelante, bajada por calle. </p>
                     <p>  -4 km Llorones por scooby, filo sur, bajada rapida por calle . </p>
@@ -54,8 +54,8 @@
                 </div>
                 <div class="column">
                     <h3>Dia 2</h3> 
-                    <p> Martes mañana: 5 km calle al mejor ritmo posible.</p>
-                    <p> Martes tarde: 14 km Zona de Arco.</p>
+                    <p> Jueves mañana: 5 km calle al mejor ritmo posible.</p>
+                    <p> Jueves tarde: 14 km Zona de Arco.</p>
                     <p>  -2 km de menor a mayor. </p>
                     <p>  -5 km subiendo 40" bajando 15". </p>
                     <p>  -4 km ágiles intentando no caminar. </p>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="column">      
                     <h3>Dia 3</h3>
-                    <p> Miércoles mañana: 8 km Series Triangulares Parque de Montaña. </p>
+                    <p> Viernes mañana: 8 km Series Triangulares Parque de Montaña. </p>
                     <p>  -2 km fuertes. </p>
                     <p>  -6x200m subida fuerte x Llorón parte de adelante, arriba descansamos 1':30". </p>
                     <p>  -6x200m bajada fuerte x Llorón parte de adelante, abajo descansamos 2'. </p>
@@ -71,7 +71,7 @@
                     <p>  -2 km de menos a más, por cerros bajos. </p>
                 </div>                
             </div>                
-            <div class="column-container 1">           
+            <!--<div class="column-container 1">           
                 <div class="column">
                     <h3>Dia 4</h3>
                     <p> Jueves: 18 km Zona de Arco. </p>
@@ -87,7 +87,7 @@
                     <p>  -2 km de mayor a menor. </p>
                     <p>  -4 km trekking exigido. </p>
                     <p>  -8 km bajada suelta, con frenos cada 600 metros. </p>
-                </div>
+                </div> -->
                 <div class="column">
                     <h3>Dia 6</h3>        
                     <p> Sábado: 19 km Cerro Manos. </p>
