--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <h1>PROGRAMA DE ENTRENAMIENTO GDE -Trail Running</h1>
             <h1>Alumno: Ayelén Liberal</h1>
         </div>
-            <h2>Objetivo mensual: Mejorar la cadencia del paso.</h2>
-            <h2>Fase: Adquisición.</h2>
-            <h2 id ="pageTitle"> PRÓXIMA CARRERA Nono: 2024/07/07 </h2> 
+            <h2>OBJETIVO MENSUAL: Mejorar la cadencia del paso.</h2>
+            <h2>FASE: Adquisición.</h2>
+            <h2 id ="pageTitle"> PRÓXIMA CARRERA NONO: 2024/07/07 </h2> 
             <h2 id="result"></h2>
             <!--<p>Indicaciones previas:  </p>           -->
     
