--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la conciencia del paso.</h2>
         <h2>FASE: Adquisición.</h2>
-        <h2 id ="pageTitle"> PRÓXIMA CARRERA Nono: 2024/07/07 </h2> 
+        <!--<h2 id ="pageTitle"> PRÓXIMA CARRERA Nono: 2024/07/07 </h2> -->
         <h2 id="result"></h2>
         <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 7
-            <br>Objetivo semanal: Apretar en las bajadas.</br>
+        <h4>SEMANA 9
+            <br>Objetivo semanal: Buscar apretar en las subidas.</br>
         </h4>
         <p>Entrada en calor </p>   
         <p> 3 vueltas x 13 repeticiones </p>
@@ -46,34 +46,48 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Jueves: 13 km trail Parque de Montaña. </h3> 
-                <p>  -2 km de menor a mayor. </p>
-                <p>  -3 km ágiles filo Sur + Laniglia. </p>
-                <p>  -5 km, 45" ágiles + 45" suaves, subida por adelante del Llorón, bajada x calle y viceversa. </p>
-                <p>  -3 km fuertes senderos bajos. </p>
+                <br> Jueves: 11 km trail Parque de Montaña. </h3> 
+                <p>  -3 km ágiles. </p>
+                <p>  -2 km, 4' fuertes x 2' suaves x 1' ágiles. </p>
+                <p>  -3 km, 2' suaves x 2' fuertísimooos x 3' ágiles. </p>
+                <p>  -3 km buenas sensaciones. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Viernes: 12 km calle pasadas. </h3> 
-                <p>  -3 km fuerte que sea plano. </p>
-                <p>  -3 km, 6 series x 200m fuertes x 300m suaves en subida. </p>
-                <p>  -3 km, 5 series x 200m fuertísimos x 400m suaves. </p>
-                <p>  -3 km mejor ritmo posible. </p>
+                <br> Viernes: 9 km Parque de Montaña. </h3> 
+                <p>  -3 km buenas sensaciones por cerros bajos. </p>
+                <p>  -3 km ágiles. </p>
+                <p>  -3 km al mejor ritmo posible. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Sábado: 20 km Caño Arco. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -5 km, 30" suaves x 30" fuertes, río seco. </p>
-                <p>  -5 km ágiles por río seco. </p>
-                <p>  -3 km fuertes. </p>
-                <p>  -5 km buenas sensaciones. </p>
+                <br> Sábado: 13 km calle. </h3> 
+                <p>  -3 km ágiles. </p>
+                <p>  -6 km, 500m fuertes x 500m ágiles. </p>
+                <p>  -4 km al mejor ritmo posible. </p>
             </div>                
+            <div class="column">
+                <h3>Dia 4
+                <br> Viernes: 12 km Parque de Montaña. </h3> 
+                <p>  -3 km buenas sensaciones por cerros bajos. </p>
+                <p>  -3 km ágiles. </p>
+                <p>  -3 km bajadas con frenos y salidas rápidas. </p>
+                <p>  -3 km al mejor ritmo posible. </p>
+            </div> 
+            <div class="column">
+                <h3>Dia 5
+                <br> Sábado: 23 km trail Arco 1500+. </h3> 
+                <p>  -4 km ágiles. </p>
+                <p>  -5 km, 300m fuertes x 300m suaves. </p>
+                <p>  -5 km, 6' forzados x 3' suaves. </p>
+                <p>  -6 km al mejor ritmo posible. </p>
+                <p>  -3 km buenas sensaciones. </p>
+            </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Masaje de gluteo con rolo, 2' por pierna.	</p>     
+            <p> - Masaje con rolo en tensores de la fascia lata, 3' por pierna (repetimos 3 veces en la pierna que más nos costo).	</p>     
         </div>
 
         <div class="image-container">  
@@ -89,11 +103,11 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 8
-        <br>Objetivo semanal: Buscar buenas sensaciones. </br>
+        <h4>SEMANA 10
+        <br>Objetivo semanal: Buscar sostener ritmo ágiles en las transiciones. </br>
             </h4>   
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 11 repeticiones </p>            
+        <p> 4 vueltas x 12 repeticiones </p>            
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -110,40 +124,46 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 6 km trail senderos bajos. </h3> 
-                <p>  -1 km fuerte. </p>
-                <p>  -2 km ágiles por calle del Llorón. </p>
-                <p>  -3 km al mejor ritmo posible. </p>
+                <br> Lunes: 10 km trail Parque de Montaña. </h3> 
+                <p>  -3 km de menor a mayor. </p>
+                <p>  -5 km pasadas de 1000m ágiles x 1000 suaves. </p>
+                <p>  -2 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 2</h3> 
-                <h3> Martes: 6 km calle. </h3> 
-                <p>  -2 km 1' fuertes x 1' suaves. </p>
-                <p>  -4 km fuertes. </p>
+                <h3> Martes: 14 km trail Parque de Montaña. </h3> 
+                <p>  -2 km de menor a mayor x Llorón. </p>
+                <p>  -8 km pasadas 800m subida ágil x 800m bajada fuerte. </p>
+                <p>  -4 km al mejor ritmo posible. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 8 km trail mixto. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -3 km, 15" ágiles x 15" suaves. </p>
-                <p>  -3 km de menor a mayor x calle. </p>
+                <br> Jueves: 9 km calle. </h3> 
+                <p>  -3 km fuertes. </p>
+                <p>  -3 km, 20" ágiles x 20" suaves. </p>
+                <p>  -3 km de menor a mayor. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 6 km trail, Senderos Bajos. </h3> 
-                <p>  -1 km fuertísimooo. </p>
-                <p>  -2 km ágiles. </p>
-                <p>  -3 km buenas sensaciones. </p>
+                <br> Viernes: 15 km trail mixto Parque + Parque Montaña. </h3> 
+                <p>  -3 km ágiles x calle. </p>
+                <p>  -9 km bajas pulsaciones x Parque de Montaña. </p>
+                <p>  -3 km ágiles x calle. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 50 km Carrera "Nono". </h3> 
+                <br> Sábado: 26 km trail mixto Iglesia + Arena Aconcagua + Cerro Arco. </h3> 
+                <p>  -2 km de menor a mayor. </p>
+                <p>  -4 km bajada, 2' suaves x 3' fuertes. </p>
+                <p>  -4 km subiendo ágil. </p>
+                <p>  -4 km, 100m fuertes x 200m suaves. </p>
+                <p>  -12 km mejor ritmo posible.</p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p>  - Masaje de gluteo con rolo, 2' por pierna. </p>
+            <p>  - Movimiento Sartorio + rotacion externa + cajón (4 series x 12 repeticiones). </p>
         </div>
 
         <div class="image-container">  
