--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Jueves: 11 km trail Parque de Montaña. </h3> 
+                <br> Lunes: 11 km trail Parque de Montaña. </h3> 
                 <p>  -3 km ágiles. </p>
                 <p>  -2 km, 4' fuertes x 2' suaves x 1' ágiles. </p>
                 <p>  -3 km, 2' suaves x 2' fuertísimooos x 3' ágiles. </p>
@@ -54,14 +54,14 @@
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Viernes: 9 km Parque de Montaña. </h3> 
+                <br> Martes: 9 km Parque de Montaña. </h3> 
                 <p>  -3 km buenas sensaciones por cerros bajos. </p>
                 <p>  -3 km ágiles. </p>
                 <p>  -3 km al mejor ritmo posible. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Sábado: 13 km calle. </h3> 
+                <br> Jueves: 13 km calle. </h3> 
                 <p>  -3 km ágiles. </p>
                 <p>  -6 km, 500m fuertes x 500m ágiles. </p>
                 <p>  -4 km al mejor ritmo posible. </p>
