--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la conciencia del paso.</h2>
         <h2>FASE: Adquisición.</h2>
-        <!--<h2 id ="pageTitle"> PRÓXIMA CARRERA Nono: 2024/07/07 </h2> -->
+        <h2 id ="pageTitle"> PRÓXIMA CARRERA Tierra de Gigantes: 2024/08/20 </h2>
         <h2 id="result"></h2>
         <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 9
-            <br>Objetivo semanal: Buscar apretar en las subidas.</br>
+        <h4>SEMANA 11
+            <br>Objetivo semanal: Sostener una cadencia fuerte en las subidas. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 3 vueltas x 13 repeticiones </p>
+        <p> 4 vueltas x 13 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -46,48 +46,49 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 11 km trail Parque de Montaña. </h3> 
-                <p>  -3 km ágiles. </p>
-                <p>  -2 km, 4' fuertes x 2' suaves x 1' ágiles. </p>
-                <p>  -3 km, 2' suaves x 2' fuertísimooos x 3' ágiles. </p>
-                <p>  -3 km buenas sensaciones. </p>
+                <br> Lunes: 15 km trail, Parque de Montaña. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -4 km, 3000m ágiles x 1000m suaves. </p>
+                <p>  -4 km suaves a bajas pulsaciones. </p>
+                <p>  -5 km al mejor ritmo posible. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes: 9 km Parque de Montaña. </h3> 
-                <p>  -3 km buenas sensaciones por cerros bajos. </p>
-                <p>  -3 km ágiles. </p>
-                <p>  -3 km al mejor ritmo posible. </p>
+                <br> Martes mañana: 5 km calle, de menor a mayor, buenas sensaciones. </h3> 
+                <h3> Martes tarde: 15 km trail, Parque de Montaña. </h3>
+                <p>  -2 km fuertes. </p>
+                <p>  -8 km pasadas, 1000m ágiles x 500m suave x 500m fuertes. </p>
+                <p>  -5 km al mejor ritmo posible. </p>               
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves: 13 km calle. </h3> 
-                <p>  -3 km ágiles. </p>
-                <p>  -6 km, 500m fuertes x 500m ágiles. </p>
-                <p>  -4 km al mejor ritmo posible. </p>
+                <br> Jueves: 10 km calle. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -4 km, 40" fuertes x 40" suaves. </p>
+                <p>  -4 km bajas pulsaciones. </p>
             </div>                
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 12 km Parque de Montaña. </h3> 
-                <p>  -3 km buenas sensaciones por cerros bajos. </p>
-                <p>  -3 km ágiles. </p>
-                <p>  -3 km bajadas con frenos y salidas rápidas. </p>
-                <p>  -3 km al mejor ritmo posible. </p>
+                <br> Viernes: 14 km trail mixto. </h3> 
+                <p>  -3 km, 30" ágiles x 30"suaves por Parque de Montaña. </p>
+                <p>  -3 km, 2km ágiles + 1km suave, por senderos bajos. </p>
+                <p>  -3 km ágiles por calle, San Francisco + Golf + Cricyt. </p>
+                <p>  -5 km, 300m suaves x 200m fuertes x calle. </p>                
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 23 km trail Arco 1500+. </h3> 
-                <p>  -4 km ágiles. </p>
-                <p>  -5 km, 300m fuertes x 300m suaves. </p>
-                <p>  -5 km, 6' forzados x 3' suaves. </p>
-                <p>  -6 km al mejor ritmo posible. </p>
-                <p>  -3 km buenas sensaciones. </p>
+                <br> Sábado: 20 km trail, Cerro Ponderado - Cerro Vizcacheras - Quebrada de los Berros. </h3> 
+                <p>  -4 km de menor a mayor, marca el ritmo Rober. </p>
+                <p>  -4 km, 3' suaves x 2' fuertes, forma de tren, marca el ritmo Chili. </p>
+                <p>  -4 km, 30" trekking exigido x 30" trote suave, marca el ritmo Aye. </p>
+                <p>  -4 km, 3' subiendo (ágiles) x 1 minuto (bajando) fuerte, marca el ritmo Rober. </p>
+                <p>  -4 km el mejor ritmo posible, marca el ritmo 1 km cada uno. </p>                
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Masaje con rolo en tensores de la fascia lata, 3' por pierna (repetimos 3 veces en la pierna que más nos costo).	</p>     
+            <p> - Masaje de tensores de la fascia (2' por pierna al final de los entrenos).	</p>     
         </div>
 
         <div class="image-container">  
@@ -103,11 +104,11 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 10
-        <br>Objetivo semanal: Buscar sostener ritmo ágiles en las transiciones. </br>
+        <h4>SEMANA 12
+        <br>Objetivo semanal: Sotener ritmos fuertes en bajadas. </br>
             </h4>   
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 12 repeticiones </p>            
+        <p> 4 vueltas x 14 repeticiones </p>            
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -124,46 +125,44 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 10 km trail Parque de Montaña. </h3> 
-                <p>  -3 km de menor a mayor. </p>
-                <p>  -5 km pasadas de 1000m ágiles x 1000 suaves. </p>
-                <p>  -2 km buenas sensaciones. </p>
+                <br> Lunes: 15 km trail, Parque de Montaña. </h3> 
+                <p>  -3 km fuertes. </p>
+                <p>  -12 km suaves, a pulsaciones bajas. </p>
             </div>
             <div class="column">
                 <h3>Dia 2</h3> 
-                <h3> Martes: 14 km trail Parque de Montaña. </h3> 
-                <p>  -2 km de menor a mayor x Llorón. </p>
-                <p>  -8 km pasadas 800m subida ágil x 800m bajada fuerte. </p>
-                <p>  -4 km al mejor ritmo posible. </p>
+                <h3> Martes: 16 km trail mixto, Parque de Montaña + Parque San Martín. </h3> 
+                <p>  -4 km fuertísimosss, senderos bajos. </p>
+                <p>  -6 km, 20" suaves x 20" ágiles x Llorón. </p>
+                <p>  -3 km ágiles x calle. </p>
+                <p>  -3 km buenas sensaciones. </p>                
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 9 km calle. </h3> 
-                <p>  -3 km fuertes. </p>
-                <p>  -3 km, 20" ágiles x 20" suaves. </p>
-                <p>  -3 km de menor a mayor. </p>
+                <br> Jueves: 14 km calle. </h3> 
+                <p>  -2 km suaves. </p>
+                <p>  -6 km fuertes. </p>
+                <p>  -6 km suaves. </p>         
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 15 km trail mixto Parque + Parque Montaña. </h3> 
-                <p>  -3 km ágiles x calle. </p>
-                <p>  -9 km bajas pulsaciones x Parque de Montaña. </p>
-                <p>  -3 km ágiles x calle. </p>
+                <br> Viernes: 13 km trail, Parque de Montaña. </h3> 
+                <p>  -13 km de menor a mayor, LLorón, senderos bajos, Gloria y 7 Colinas. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 26 km trail mixto Iglesia + Arena Aconcagua + Cerro Arco. </h3> 
-                <p>  -2 km de menor a mayor. </p>
-                <p>  -4 km bajada, 2' suaves x 3' fuertes. </p>
-                <p>  -4 km subiendo ágil. </p>
-                <p>  -4 km, 100m fuertes x 200m suaves. </p>
-                <p>  -12 km mejor ritmo posible.</p>
+                <br> Sábado: 24 km trail mixto, Arco. </h3> 
+                <p>  -3 km calle en bajada, 20" suaves x 20"fuertes (Aye marca ritmo). </p>
+                <p>  -3 km calle subida, 300m fuertes x 200m suaves (Bianca marca ritmo). </p>
+                <p>  -10 km Arco, subida fuerte x calle + bajada ágil por filo lateral (subida marca ritmo Aye y bajada Bianca). </p>
+                <p>  -4 km fuerte x rio seco en subida (2km marca ritmo Bianca y 2km Aye). </p>
+                <p>  -4 km suave x rio seco en bajada. </p>                
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p>  - Movimiento Sartorio + rotacion externa + cajón (4 series x 12 repeticiones). </p>
+            <p>  - Masaje de tensores de la fascia (3' por pierna al final de los entrenos). </p>
         </div>
 
         <div class="image-container">  
