--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 11
-            <br>Objetivo semanal: Sostener una cadencia fuerte en las subidas. </br>
+        <h4>SEMANA 13
+            <br>Objetivo semanal: Apretar en las bajadas. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 13 repeticiones </p>
+        <p> 4 vueltas x 12 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -46,43 +46,44 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 15 km trail, Parque de Montaña. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -4 km, 3000m ágiles x 1000m suaves. </p>
-                <p>  -4 km suaves a bajas pulsaciones. </p>
-                <p>  -5 km al mejor ritmo posible. </p>
+                <br> Lunes: 16 km calle. </h3> 
+                <p>  -3 km fuertes. </p>
+                <p>  -3 km, 4' fuertes x 2' suaves. </p>
+                <p>  -4 km, 40" ágiles x 40" suaves. </p>
+                <p>  -6 km. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes mañana: 5 km calle, de menor a mayor, buenas sensaciones. </h3> 
-                <h3> Martes tarde: 15 km trail, Parque de Montaña. </h3>
-                <p>  -2 km fuertes. </p>
-                <p>  -8 km pasadas, 1000m ágiles x 500m suave x 500m fuertes. </p>
-                <p>  -5 km al mejor ritmo posible. </p>               
+                <br> Martes: 16 km trail mixto, Parque de Montaña. </h3> 
+                <p>  -3 km fuertes. </p>
+                <p>  -5 km, 100m fuertes x 300m suaves. </p>
+                <p>  -5 km al mejor ritmo posible. </p>
+                <p>  -3 km bajas pulsaciones. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves: 10 km calle. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -4 km, 40" fuertes x 40" suaves. </p>
-                <p>  -4 km bajas pulsaciones. </p>
+                <br> Jueves: 12 km trail, Parque de Montaña series triangulares. </h3> 
+                <p>  -3 km fuertes. </p>
+                <p>  -2 km, 20 series x 100m subida fuerte x 1'  pausa pasiva. </p>
+                <p>  -2 km, 20 series x 100m bajada fuerte x 30" pausa pasiva . </p>
+                <p>  -3 km, 10 series x 300m fuerte x pausa pasiva 30" (por Quebrada del Ianiglia). </p>
+                <p>  -5 km buenas sensaciones. </p>
             </div>                
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 14 km trail mixto. </h3> 
-                <p>  -3 km, 30" ágiles x 30"suaves por Parque de Montaña. </p>
-                <p>  -3 km, 2km ágiles + 1km suave, por senderos bajos. </p>
-                <p>  -3 km ágiles por calle, San Francisco + Golf + Cricyt. </p>
-                <p>  -5 km, 300m suaves x 200m fuertes x calle. </p>                
+                <br> Viernes: 18 km trail Parque de Montaña. </h3> 
+                <p>  -2 km ágiles por senderos bajo (marca los ritmos Mati T). </p>
+                <p>  -6 km, Llorón subida fuerte x Scooby filo sur, bajada x frente, volver al revés (marca los ritmos Bianca de bajada y Mati de subida). </p>
+                <p>  -10 km, 3' fuerte x 2' suave Frias y 7 Colina, (5km marca Bianca los fuertes y mati los suaves y 5km cambiamos). </p>                
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 20 km trail, Cerro Ponderado - Cerro Vizcacheras - Quebrada de los Berros. </h3> 
-                <p>  -4 km de menor a mayor, marca el ritmo Rober. </p>
-                <p>  -4 km, 3' suaves x 2' fuertes, forma de tren, marca el ritmo Chili. </p>
-                <p>  -4 km, 30" trekking exigido x 30" trote suave, marca el ritmo Aye. </p>
-                <p>  -4 km, 3' subiendo (ágiles) x 1 minuto (bajando) fuerte, marca el ritmo Rober. </p>
-                <p>  -4 km el mejor ritmo posible, marca el ritmo 1 km cada uno. </p>                
+                <br> Sábado: 25 km trail con bastones, Arco filo lateral. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -3 km, 60" ágiles x 60" suaves. </p>
+                <p>  -6 km, 5 series x 1200m en subida, filo lateral del Arco, con bastones x 1' pausa pasiva. </p>
+                <p>  -6 km, 5 series x 1200m en bajada, filo lateral del Arco de menor a mayor x 3' pausa pasiva.. </p>
+                <p>  -8 km buenas sensaciones. </p>
             </div> 
         </div>
 
@@ -104,11 +105,11 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 12
-        <br>Objetivo semanal: Sotener ritmos fuertes en bajadas. </br>
+        <h4>SEMANA 14
+        <br>Objetivo semanal: Sostener ritmos fuertes en las transiciones. </br>
             </h4>   
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 14 repeticiones </p>            
+        <p> 3 vueltas x 13 repeticiones </p>            
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -125,44 +126,48 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 15 km trail, Parque de Montaña. </h3> 
-                <p>  -3 km fuertes. </p>
-                <p>  -12 km suaves, a pulsaciones bajas. </p>
+                <br> Lunes: 8 km calle, lo más fuerte posible. </h3> 
+                <p>  -3' pausa pasiva de hidratacion. </p>
+                <p>  -15 km trail senderos bajos. </p>
+                <p>  -7 km fuerte. </p>
+                <p>  -8 km en el mejor tiempo posible.  </p>
             </div>
             <div class="column">
                 <h3>Dia 2</h3> 
-                <h3> Martes: 16 km trail mixto, Parque de Montaña + Parque San Martín. </h3> 
-                <p>  -4 km fuertísimosss, senderos bajos. </p>
-                <p>  -6 km, 20" suaves x 20" ágiles x Llorón. </p>
-                <p>  -3 km ágiles x calle. </p>
-                <p>  -3 km buenas sensaciones. </p>                
+                <h3> Martes: 18 km trail Parque de Montaña. </h3> 
+                <p>  -5 km fuerte. </p>
+                <p>  -5 km, intervalos 60 series x 20" fuerte x 20" ágiles senderos bajos. </p>
+                <p>  -5 km, 3' de subidas fuertes, bajadas controladas x 3' bajadas fuertes, subidas controladas. </p>
+                <p>  -3 km bajas pulsaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 14 km calle. </h3> 
-                <p>  -2 km suaves. </p>
-                <p>  -6 km fuertes. </p>
-                <p>  -6 km suaves. </p>         
+                <br> Jueves: 18 km calle. </h3> 
+                <p>  -3 km de menor a mayor. </p>
+                <p>  -6 km, 10 series x 600m fuertes x  pausa pasiva incompleta. </p>
+                <p>  -2 km, 7 series x 300m fuertes x 1' pausa pasiva.. </p>
+                <p>  -2 km de menor a mayor. </p>
+                <p>  -5 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 13 km trail, Parque de Montaña. </h3> 
-                <p>  -13 km de menor a mayor, LLorón, senderos bajos, Gloria y 7 Colinas. </p>
+                <br> Viernes: 14 km trail Parque de Montaña. </h3> 
+                <p>  -2 km suaves. </p>
+                <p>  -12 km mejor tiempo posible por terreno mixto (Gloria, Llorón, calle, senderos bajos). </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 24 km trail mixto, Arco. </h3> 
-                <p>  -3 km calle en bajada, 20" suaves x 20"fuertes (Aye marca ritmo). </p>
-                <p>  -3 km calle subida, 300m fuertes x 200m suaves (Bianca marca ritmo). </p>
-                <p>  -10 km Arco, subida fuerte x calle + bajada ágil por filo lateral (subida marca ritmo Aye y bajada Bianca). </p>
-                <p>  -4 km fuerte x rio seco en subida (2km marca ritmo Bianca y 2km Aye). </p>
-                <p>  -4 km suave x rio seco en bajada. </p>                
+                <br> Sábado: 28  km trail Arco. </h3> 
+                <p>  -2 km menor a mayor. </p>
+                <p>  -9 km, 5' fuertes x 3' suaves x 2' ágiles. </p>
+                <p>  -13 km, 2' ágiles x 3' fuertisímooos x 4' suaves. </p>
+                <p>  -4 km suaves. </p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p>  - Masaje de tensores de la fascia (3' por pierna al final de los entrenos). </p>
+            <p>  - Movilidad aductor rana 6 series x 12 repeticiones al final de los entrenos.. </p>
         </div>
 
         <div class="image-container">  
