--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la conciencia del paso.</h2>
         <h2>FASE: Adquisición.</h2>
-        <h2 id ="pageTitle"> PRÓXIMA CARRERA Tierra de Gigantes: 2024/08/20 </h2>
+        <!--<h2 id ="pageTitle"> PRÓXIMA CARRERA : 2024/08/20 </h2>
         <h2 id="result"></h2>
-        <!--<p>Indicaciones previas:  </p>           -->
+        <p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
         <h4>SEMANA 13
@@ -50,7 +50,7 @@
                 <p>  -3 km fuertes. </p>
                 <p>  -3 km, 4' fuertes x 2' suaves. </p>
                 <p>  -4 km, 40" ágiles x 40" suaves. </p>
-                <p>  -6 km. </p>
+                <p>  -6 km de menor a mayor. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
@@ -74,11 +74,11 @@
                 <br> Viernes: 18 km trail Parque de Montaña. </h3> 
                 <p>  -2 km ágiles por senderos bajo (marca los ritmos Mati T). </p>
                 <p>  -6 km, Llorón subida fuerte x Scooby filo sur, bajada x frente, volver al revés (marca los ritmos Bianca de bajada y Mati de subida). </p>
-                <p>  -10 km, 3' fuerte x 2' suave Frias y 7 Colina, (5km marca Bianca los fuertes y mati los suaves y 5km cambiamos). </p>                
+                <p>  -10 km, 3' fuerte x 2' suave Frias y 7 Colina. </p>                
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 25 km trail con bastones, Arco filo lateral. </h3> 
+                <br> Sábado: 25 km trail con bastones, Arco filo lateral (con Mati Craia y Gabi). </h3> 
                 <p>  -2 km fuertes. </p>
                 <p>  -3 km, 60" ágiles x 60" suaves. </p>
                 <p>  -6 km, 5 series x 1200m en subida, filo lateral del Arco, con bastones x 1' pausa pasiva. </p>
