--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div class="column">
                 <h3>Dia 4
                 <br> Viernes: 18 km trail Parque de Montaña. </h3> 
-                <p>  -2 km ágiles por senderos bajo (marca los ritmos Mati T). </p>
-                <p>  -6 km, Llorón subida fuerte x Scooby filo sur, bajada x frente, volver al revés (marca los ritmos Bianca de bajada y Mati de subida). </p>
+                <p>  -2 km ágiles por senderos bajo. </p>
+                <p>  -6 km, Llorón subida fuerte x Scooby filo sur, bajada x frente, volver al revés. </p>
                 <p>  -10 km, 3' fuerte x 2' suave Frias y 7 Colina. </p>                
             </div> 
             <div class="column">
