--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la conciencia del paso.</h2>
         <h2>FASE: Adquisición.</h2>
-        <!--<h2 id ="pageTitle"> PRÓXIMA CARRERA : 2024/08/20 </h2>
+        <h2 id ="pageTitle"> PRÓXIMA CARRERA Desafío UTU: 2024/09/01 </h2>
         <h2 id="result"></h2>
-        <p>Indicaciones previas:  </p>           -->
+        <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 13
-            <br>Objetivo semanal: Apretar en las bajadas. </br>
+        <h4>SEMANA 15 SEMANA PRE COMPETENCIA
+            <br>Objetivo semanal: Sostener fuerte la cadencia en subida. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 12 repeticiones </p>
+        <p> 4 vueltas x 14 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -46,50 +46,49 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 16 km calle. </h3> 
-                <p>  -3 km fuertes. </p>
-                <p>  -3 km, 4' fuertes x 2' suaves. </p>
-                <p>  -4 km, 40" ágiles x 40" suaves. </p>
-                <p>  -6 km de menor a mayor. </p>
+                <br> Lunes: 13 km trail Parque de Montaña, series triangulares. </h3> 
+                <p>  -2 km ágiles. </p>
+                <p>  -3 km, 15 series x 200m subida fuerte x 1' pausa pasiva. </p>
+                <p>  -3 km, 15 series x 200m bajada fuerte x 2' pausa pasiva. </p>
+                <p>  -3 km ágiles por senderos bajos. </p>
+                <p>  -2 km bajas pulsaciones. </p>               
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes: 16 km trail mixto, Parque de Montaña. </h3> 
-                <p>  -3 km fuertes. </p>
-                <p>  -5 km, 100m fuertes x 300m suaves. </p>
-                <p>  -5 km al mejor ritmo posible. </p>
-                <p>  -3 km bajas pulsaciones. </p>
+                <br> Martes mañana: 4 km calle, al mejor ritmo posible. </h3> 
+                <h3> Martes tarde: 15 km trail Parque de Montaña, pasadas. </h3>
+                <p>  -3 km de menor a mayor. </p>
+                <p>  -4 km, 8 series x 500m fuertes x  pausa pasiva incompleta. </p>
+                <p>  -4 km, 8 series x 500m fuertes x 1' pausa pasiva. </p>
+                <p>  -4 km de menor a mayor. </p>                
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves: 12 km trail, Parque de Montaña series triangulares. </h3> 
-                <p>  -3 km fuertes. </p>
-                <p>  -2 km, 20 series x 100m subida fuerte x 1'  pausa pasiva. </p>
-                <p>  -2 km, 20 series x 100m bajada fuerte x 30" pausa pasiva . </p>
-                <p>  -3 km, 10 series x 300m fuerte x pausa pasiva 30" (por Quebrada del Ianiglia). </p>
-                <p>  -5 km buenas sensaciones. </p>
+                <br> Jueves: 8 km calle. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -4 km ágiles. </p>
+                <p>  -2 km fuertes. </p>        
             </div>                
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 18 km trail Parque de Montaña. </h3> 
-                <p>  -2 km ágiles por senderos bajo. </p>
-                <p>  -6 km, Llorón subida fuerte x Scooby filo sur, bajada x frente, volver al revés. </p>
-                <p>  -10 km, 3' fuerte x 2' suave Frias y 7 Colina. </p>                
+                <br> Viernes: 13 km trail senderos bajos. </h3> 
+                <p>  -5 km de mayor a menor. </p>
+                <p>  -3 km, 15" fuerte x 15" ágiles senderos bajos. </p>
+                <p>  -5 km, 3' de subidas fuertes bajadas controladas x 3' bajadas fuertes subidas controladas. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 25 km trail con bastones, Arco filo lateral (con Mati Craia y Gabi). </h3> 
+                <br> Sábado: 15 km trail Arco. </h3> 
                 <p>  -2 km fuertes. </p>
-                <p>  -3 km, 60" ágiles x 60" suaves. </p>
-                <p>  -6 km, 5 series x 1200m en subida, filo lateral del Arco, con bastones x 1' pausa pasiva. </p>
-                <p>  -6 km, 5 series x 1200m en bajada, filo lateral del Arco de menor a mayor x 3' pausa pasiva.. </p>
-                <p>  -8 km buenas sensaciones. </p>
+                <p>  -6 km, 2' ágiles trotando x 2' fuertisímooos trekking x 4' suaves trotando. </p>
+                <p>  -4 km, 3' fuertes x 5' suaves donde toque. </p>
+                <p>  -3 km buenas sensaciones. </p>                
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Masaje de tensores de la fascia (2' por pierna al final de los entrenos).	</p>     
+            <p> - Masaje (3' por pierna al final de los entrenos).	</p>     
         </div>
 
         <div class="image-container">  
@@ -105,11 +104,11 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 14
-        <br>Objetivo semanal: Sostener ritmos fuertes en las transiciones. </br>
+        <h4>SEMANA 16 SEMANA COMPETENCIA
+        <br>Objetivo semanal: Buenas sensaciones. </br>
             </h4>   
         <p>Entrada en calor </p>   
-        <p> 3 vueltas x 13 repeticiones </p>            
+        <p> 4 vueltas x 13 repeticiones </p>            
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -126,48 +125,45 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 8 km calle, lo más fuerte posible. </h3> 
-                <p>  -3' pausa pasiva de hidratacion. </p>
-                <p>  -15 km trail senderos bajos. </p>
-                <p>  -7 km fuerte. </p>
-                <p>  -8 km en el mejor tiempo posible.  </p>
+                <br> Lunes: 9 km trail mixto. </h3> 
+                <p>  -1 km ágiles. </p>
+                <p>  -3 km, 4' fuertes x 2' suave x 1' agil. </p>
+                <p>  -3 km, 2' suaves x 2' fuertisimooos x 3' ágiles. </p>
+                <p>  -2 km buenas sensaciones. </p>                
             </div>
             <div class="column">
-                <h3>Dia 2</h3> 
-                <h3> Martes: 18 km trail Parque de Montaña. </h3> 
-                <p>  -5 km fuerte. </p>
-                <p>  -5 km, intervalos 60 series x 20" fuerte x 20" ágiles senderos bajos. </p>
-                <p>  -5 km, 3' de subidas fuertes, bajadas controladas x 3' bajadas fuertes, subidas controladas. </p>
-                <p>  -3 km bajas pulsaciones. </p>
+                <h3>Dia 2 
+                <br> Martes: 8 km calle, pasadas ciclovia. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -3 km, 10 series x 300m fuertes x 30" pausa. </p>
+                <p>  -3 km, 100m ágiles x 50m suaves x 50m fuertessss. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 18 km calle. </h3> 
-                <p>  -3 km de menor a mayor. </p>
-                <p>  -6 km, 10 series x 600m fuertes x  pausa pasiva incompleta. </p>
-                <p>  -2 km, 7 series x 300m fuertes x 1' pausa pasiva.. </p>
-                <p>  -2 km de menor a mayor. </p>
-                <p>  -5 km buenas sensaciones. </p>
+                <br> Jueves: 6 km trail senderos bajos. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -4 km en el mejor tiempo posible. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 14 km trail Parque de Montaña. </h3> 
-                <p>  -2 km suaves. </p>
-                <p>  -12 km mejor tiempo posible por terreno mixto (Gloria, Llorón, calle, senderos bajos). </p>
+                <br> Viernes: 6 km trail senderos bajos. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -3 km, 20" fuerte x 20" ágiles senderos bajos. </p>
+                <p>  -1 km buenas sensaciones. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 28  km trail Arco. </h3> 
-                <p>  -2 km menor a mayor. </p>
-                <p>  -9 km, 5' fuertes x 3' suaves x 2' ágiles. </p>
-                <p>  -13 km, 2' ágiles x 3' fuertisímooos x 4' suaves. </p>
-                <p>  -4 km suaves. </p>
+                <br> Sábado: Desafío UTU 55 km. </h3> 
+                <!--<p>  - km . </p>
+                <p>  - km . </p>
+                <p>  - km . </p>
+                <p>  - km . </p>                -->
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p>  - Movilidad aductor rana 6 series x 12 repeticiones al final de los entrenos.. </p>
+            <p>  - Masaje (3' por pierna al final de los entrenos). </p>
         </div>
 
         <div class="image-container">  
