--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la conciencia del paso.</h2>
         <h2>FASE: Adquisición.</h2>
-        <h2 id ="pageTitle"> PRÓXIMA CARRERA Desafío UTU: 2024/09/01 </h2>
+        <!--<h2 id ="pageTitle"> PRÓXIMA CARRERA Desafío UTU: 2024/09/01 </h2> -->
         <h2 id="result"></h2>
         <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 15 SEMANA PRE COMPETENCIA
-            <br>Objetivo semanal: Sostener fuerte la cadencia en subida. </br>
+        <h4>SEMANA 17
+            <br>Objetivo semanal: Mantener cadencia prolija en subida. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 14 repeticiones </p>
+        <p> 5 vueltas x 13 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -46,49 +46,50 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 13 km trail Parque de Montaña, series triangulares. </h3> 
-                <p>  -2 km ágiles. </p>
-                <p>  -3 km, 15 series x 200m subida fuerte x 1' pausa pasiva. </p>
-                <p>  -3 km, 15 series x 200m bajada fuerte x 2' pausa pasiva. </p>
-                <p>  -3 km ágiles por senderos bajos. </p>
-                <p>  -2 km bajas pulsaciones. </p>               
+                <br> Lunes: 10 km trail mixto. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -4 km, 30" fuertes x 30"suaves. </p>
+                <p>  -1 km pasadas en subida, 8 series x 150m fuertes x 1' pausa pasiva. </p>
+                <p>  -1 km pasadas en bajada, 8 series x 150m fuertes x 2' pausa pasiva. </p>
+                <p>  -2 km buenas sensaciones. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes mañana: 4 km calle, al mejor ritmo posible. </h3> 
-                <h3> Martes tarde: 15 km trail Parque de Montaña, pasadas. </h3>
-                <p>  -3 km de menor a mayor. </p>
-                <p>  -4 km, 8 series x 500m fuertes x  pausa pasiva incompleta. </p>
-                <p>  -4 km, 8 series x 500m fuertes x 1' pausa pasiva. </p>
-                <p>  -4 km de menor a mayor. </p>                
+                <br> Martes mañana: 8 km calle, bajas pulsaciones. </h3> 
+                <h3> Martes tarde: 16 km trail. </h3> 
+                <p>  -2 km fuertes. </p>
+                <p>  -4 km, 100m ágiles x 50m suaves x 50m fuertessss. </p>
+                <p>  -10 km bajas pulsaciones. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves: 8 km calle. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -4 km ágiles. </p>
-                <p>  -2 km fuertes. </p>        
+                <br> Jueves mañana: 8 km calle, 3km suaves x 3km fuertes x 2km ágiles. </h3> 
+                <h3> Jueves tarde: 20 km trail. </h3>
+                <p>  -5 km fuertes. </p>
+                <p>  -6 km al mejor ritmo posible. </p>
+                <p>  -9 km bajas pulsaciones. </p>
             </div>                
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 13 km trail senderos bajos. </h3> 
-                <p>  -5 km de mayor a menor. </p>
-                <p>  -3 km, 15" fuerte x 15" ágiles senderos bajos. </p>
-                <p>  -5 km, 3' de subidas fuertes bajadas controladas x 3' bajadas fuertes subidas controladas. </p>
+                <br> Viernes mañana: 8 km calle, bajas pulsaciones. </h3> 
+                <h3> Viernes tarde: 16 km trail mixto. </h3>
+                <p>  -3 km ágiles x calle. </p>
+                <p>  -3 km, 20" ágiles x 20" suaves en subida. </p>
+                <p>  -4 km de menor a mayor. </p>
+                <p>  -6 km bajas pulsaciones. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 15 km trail Arco. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -6 km, 2' ágiles trotando x 2' fuertisímooos trekking x 4' suaves trotando. </p>
-                <p>  -4 km, 3' fuertes x 5' suaves donde toque. </p>
-                <p>  -3 km buenas sensaciones. </p>                
+                <br> Sábado: 25 km trail. </h3> 
+                <p>  -4 km, 40" suaves x 40" fuertes. </p>
+                <p>  -5 km, 200m fuertes x 400m suaves. </p>
+                <p>  -16 km bajas pulsaciones. </p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Masaje (3' por pierna al final de los entrenos).	</p>     
+            <p> - Movilidad aductor rana (6 series x 13 repeticiones, al final de los entrenos).	</p>     
         </div>
 
         <div class="image-container">  
@@ -104,11 +105,11 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 16 SEMANA COMPETENCIA
-        <br>Objetivo semanal: Buenas sensaciones. </br>
+        <h4>SEMANA 18
+        <br>Objetivo semanal: Practicar las salidas fuertes. </br>
             </h4>   
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 13 repeticiones </p>            
+        <p> 4 vueltas x 12 repeticiones </p>            
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -125,45 +126,50 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 9 km trail mixto. </h3> 
-                <p>  -1 km ágiles. </p>
-                <p>  -3 km, 4' fuertes x 2' suave x 1' agil. </p>
-                <p>  -3 km, 2' suaves x 2' fuertisimooos x 3' ágiles. </p>
-                <p>  -2 km buenas sensaciones. </p>                
+                <br> Lunes: 16 km trail mixto. </h3> 
+                <p>  -3 km calle en subida, 20" suaves x 20" ágiles. </p>
+                <p>  -2 km, 100m fuertes x 400m suaves. </p>
+                <p>  -6 km subida y bajada por filo sur(350m subida y bajada) + transición hacia Llorón parte de adelante suave + subir (300m subida y 300m bajada) + transición hacia filo sur. </p>
+                <p>  -5 km ágiles por senderos bajos. </p>               
             </div>
             <div class="column">
                 <h3>Dia 2 
-                <br> Martes: 8 km calle, pasadas ciclovia. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -3 km, 10 series x 300m fuertes x 30" pausa. </p>
-                <p>  -3 km, 100m ágiles x 50m suaves x 50m fuertessss. </p>
+                <br> Martes: 13 km calle, planos. </h3> 
+                <p>  -3 km fuertes. </p>
+                <p>  -5 km mejor tiempo posible. </p>
+                <p>  -5 km, 100m ágiles x 50m suaves x 50m fuertessss. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 6 km trail senderos bajos. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -4 km en el mejor tiempo posible. </p>
+                <br> Jueves mañana: 4 km calle al mejor ritmo posible (comenzar fuerte). </h3> 
+                <h3> Jueves tarde: 17 km trail mixto, Dalvian + entrada de Arco. </h3>
+                <p>  -2 km de menor a mayor aumentando cada 5'. </p>
+                <p>  -6 km, 1000m ágiles x  1000 suaves. </p>
+                <p>  -7 km, 500m fuertes x 1000 suaves. </p>
+                <p>  -2 km bajas pulsaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 6 km trail senderos bajos. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -3 km, 20" fuerte x 20" ágiles senderos bajos. </p>
-                <p>  -1 km buenas sensaciones. </p>
+                <br> Viernes: 15 km trail, senderos bajos. </h3> 
+                <p>  -3 km ágiles. </p>
+                <p>  -4 km calle, buenas sensaciones. </p>
+                <p>  -4 km subidas fuertes, bajadas controladas. </p>
+                <p>  -4 km mejor ritmo posible. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: Desafío UTU 55 km. </h3> 
-                <!--<p>  - km . </p>
-                <p>  - km . </p>
-                <p>  - km . </p>
-                <p>  - km . </p>                -->
+                <br> Sábado: 22 km trail, Parque de Montaña + series triangulares x grieta. </h3> 
+                <p>  -5 km menor a mayor, por senderos bajos. </p>
+                <p>  -1 km, 10 series x 100 m subiendo x 1' pausa pasiva. </p>
+                <p>  -1 km, 10 series x 100 m bajando x 2' pausa pasiva. </p>
+                <p>  -3 km mayor a menor. </p>
+                <p>  -12 km buenas sensaciones. </p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p>  - Masaje (3' por pierna al final de los entrenos). </p>
+            <p>  - Masaje tensores de la fascia (3' x pierna). </p>
         </div>
 
         <div class="image-container">  
