--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 17
-            <br>Objetivo semanal: Mantener cadencia prolija en subida. </br>
+        <h4>SEMANA 19
+            <br>Objetivo semanal: Apretar en las bajadas. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 5 vueltas x 13 repeticiones </p>
+        <p> 4 vueltas x 11 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -46,50 +46,48 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 10 km trail mixto. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -4 km, 30" fuertes x 30"suaves. </p>
-                <p>  -1 km pasadas en subida, 8 series x 150m fuertes x 1' pausa pasiva. </p>
-                <p>  -1 km pasadas en bajada, 8 series x 150m fuertes x 2' pausa pasiva. </p>
-                <p>  -2 km buenas sensaciones. </p>
+                <br> Lunes: 12 km calle.</h3>
+                <p>  -3 km fuertes. </p>
+                <p>  -4 km, 600m fuertes x 300m suaves. </p>
+                <p>  -2 km, 300m fuertísimos x 400m suaves. </p>
+                <p>  -3 km de mayor a menor. </p>            
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes mañana: 8 km calle, bajas pulsaciones. </h3> 
-                <h3> Martes tarde: 16 km trail. </h3> 
-                <p>  -2 km fuertes. </p>
-                <p>  -4 km, 100m ágiles x 50m suaves x 50m fuertessss. </p>
-                <p>  -10 km bajas pulsaciones. </p>
+                <br> Martes mañana: 4 km calle, lo más fuerte posible. </h3> 
+                <h3> Martes tarde: 13 km trail Parque de Montaña.</h3>
+                <p>  -3 km ágiles. </p>
+                <p>  -5 km, 300m fuertes x 200m suaves, donde nos toque. </p>
+                <p>  -5 km buenas sensaciones x distintas subidas y bajas del Llorón. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves mañana: 8 km calle, 3km suaves x 3km fuertes x 2km ágiles. </h3> 
-                <h3> Jueves tarde: 20 km trail. </h3>
-                <p>  -5 km fuertes. </p>
-                <p>  -6 km al mejor ritmo posible. </p>
-                <p>  -9 km bajas pulsaciones. </p>
+                <br> Jueves mañana: 6 km calle, al mejor ritmo posible. </h3> 
+                <h3> Jueves tarde: 13 km trail Arco.</h3>
+                <p>  -3 km suaves. </p>
+                <p>  -4 km, 20" ágiles x 20" fuertes. </p>
+                <p>  -4 km buenas sensaciones. </p>
+                <p>  -2 km bajas pulsaciones. </p>            
             </div>                
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes mañana: 8 km calle, bajas pulsaciones. </h3> 
-                <h3> Viernes tarde: 16 km trail mixto. </h3>
-                <p>  -3 km ágiles x calle. </p>
-                <p>  -3 km, 20" ágiles x 20" suaves en subida. </p>
+                <br> Viernes: 20 km trail Aspero. </h3> 
                 <p>  -4 km de menor a mayor. </p>
-                <p>  -6 km bajas pulsaciones. </p>
+                <p>  -8 km subida 3' ágiles centrado en la cadencia, x 5' trekking exigido. </p>
+                <p>  -4 km ágiles en bajada. </p>
+                <p>  -4 km mejor ritmo posible. </p>            
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 25 km trail. </h3> 
-                <p>  -4 km, 40" suaves x 40" fuertes. </p>
-                <p>  -5 km, 200m fuertes x 400m suaves. </p>
-                <p>  -16 km bajas pulsaciones. </p>
+                <br> Sábado: 23 km trail Arco  1700+.</h3>
+                <p>  -4 km de menor a mayor. </p>
+                <p>  -19 km buenas sensaciones. </p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Movilidad aductor rana (6 series x 13 repeticiones, al final de los entrenos).	</p>     
+            <p> - Masaje de tensores de la fascia (3' x pierna). </p>     
         </div>
 
         <div class="image-container">  
@@ -105,11 +103,11 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 18
-        <br>Objetivo semanal: Practicar las salidas fuertes. </br>
+        <h4>SEMANA 20
+        <br>Objetivo semanal: Sostener ritmos fuertes en las transiciones. </br>
             </h4>   
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 12 repeticiones </p>            
+        <p> 4 vueltas x 13 repeticiones </p>            
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -126,50 +124,49 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 16 km trail mixto. </h3> 
-                <p>  -3 km calle en subida, 20" suaves x 20" ágiles. </p>
-                <p>  -2 km, 100m fuertes x 400m suaves. </p>
-                <p>  -6 km subida y bajada por filo sur(350m subida y bajada) + transición hacia Llorón parte de adelante suave + subir (300m subida y 300m bajada) + transición hacia filo sur. </p>
-                <p>  -5 km ágiles por senderos bajos. </p>               
+                <br> Lunes: 11 km trail, Parque de Montaña, series triangulares x frente.</h3>
+                <p>  -3 km ágiles. </p>
+                <p>  -2 km, 10 series x 200m subiendo x 30" pausa pasiva. </p>
+                <p>  -2 km, 10 series x 200m bajando x 1' pausa pasiva. </p>
+                <p>  -4 km sensaciones incómodas. </p>            
             </div>
             <div class="column">
                 <h3>Dia 2 
-                <br> Martes: 13 km calle, planos. </h3> 
-                <p>  -3 km fuertes. </p>
-                <p>  -5 km mejor tiempo posible. </p>
-                <p>  -5 km, 100m ágiles x 50m suaves x 50m fuertessss. </p>
+                <br> Martes: 15 km calle planos.</h3>
+                <p>  -3 km de menor a mayor. </p>
+                <p>  -12 km mejor tiempo posible. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves mañana: 4 km calle al mejor ritmo posible (comenzar fuerte). </h3> 
-                <h3> Jueves tarde: 17 km trail mixto, Dalvian + entrada de Arco. </h3>
-                <p>  -2 km de menor a mayor aumentando cada 5'. </p>
-                <p>  -6 km, 1000m ágiles x  1000 suaves. </p>
-                <p>  -7 km, 500m fuertes x 1000 suaves. </p>
-                <p>  -2 km bajas pulsaciones. </p>
+                <br> Jueves mañana: 5 km calle mejor tiempo posible, por Parque San Martín. </h3> 
+                <h3> Jueves tarde: 12 km trail, Parque de Montaña series triangulares x frente.</h3>
+                <p>  -3 km ágiles. </p>
+                <p>  -2 km, 6 series x 300m subiendo x 35" pausa pasiva. </p>
+                <p>  -2 km, 6 series x 300m bajando x 40" pausa pasiva. </p>
+                <p>  -5 km buenas sensaciones. </p>            
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 15 km trail, senderos bajos. </h3> 
-                <p>  -3 km ágiles. </p>
-                <p>  -4 km calle, buenas sensaciones. </p>
-                <p>  -4 km subidas fuertes, bajadas controladas. </p>
-                <p>  -4 km mejor ritmo posible. </p>
+                <br> Viernes: 17 km trail Arco.</h3>
+                <p>  -3 km ágiles, calle en bajada. </p>
+                <p>  -3 km, 40" fuertes x 40" suaves por calle subiendo. </p>
+                <p>  -8 km mejor tiempo posible, Arco. </p>
+                <p>  -3 km fuertes. </p>            
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 22 km trail, Parque de Montaña + series triangulares x grieta. </h3> 
-                <p>  -5 km menor a mayor, por senderos bajos. </p>
-                <p>  -1 km, 10 series x 100 m subiendo x 1' pausa pasiva. </p>
-                <p>  -1 km, 10 series x 100 m bajando x 2' pausa pasiva. </p>
-                <p>  -3 km mayor a menor. </p>
-                <p>  -12 km buenas sensaciones. </p>
+                <br> Sábado: 29 km zona del Arco 1900+.</h3>
+                <p>  -4 km de menor a mayor. </p>
+                <p>  -3 km, 30" ágiles x 30" suaves. </p>
+                <p>  -4 km trekking exigido pasos fuertes. </p>
+                <p>  -3 km trabajamos técnica de cadencia firme en subida. </p>
+                <p>  -15 km completamos con sensaciones incómodas. </p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p>  - Masaje tensores de la fascia (3' x pierna). </p>
+            <p>  - Movilidad de aductor rana (3 series x 30"). </p>
         </div>
 
         <div class="image-container">  
