--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 23
-            <br>Objetivo semanal: Trabajar sobre las salidas. </br>
+        <h4>SEMANA 25
+            <br>Objetivo semanal: Tabajar en las salidas. </br>
         </h4>
         <p>Entrada en calor </p>   
         <p> 4 vueltas x 13 repeticiones </p>
@@ -46,46 +46,46 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 13 km trail, Parque de Montaña.</h3>
-                <p> -3 km fuertes. </p>
-                <p> -4 km bajas pulsaciones. </p>
-                <p> -4 km, 400m fuertes x 200m suaves. </p>
+                <br> Lunes: 12 km trail, Parque de Montaña + 7 Colinas.</h3>
+                <p> -2 km fuertes x calle del Llorón. </p>
+                <p> -3 km, 10 series x 300m fuertes (subida 7 Colinas) x 30" pausa pasiva. </p>
+                <p> -3 km, 10 series x 300m suaves (bajada 7 Colinas) x 40" pausa pasiva. </p>
+                <p> -2 km ágiles por calle. </p>
                 <p> -2 km buenas sensaciones. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes mañana: 6 km calle, mejor ritmo posible. </h3> 
-                <h3> Martes tarde: 15 km trail Arco.</h3>
-                <p> -4 km fuertes. </p>
+                <br> Martes mañana: 4 km calle, mejor ritmo posible. </h3> 
+                <h3> Martes tarde: 14 km trail Arco.</h3>
+                <p> -4 km fuerte. </p>
                 <p> -3 km, 20" ágiles x 20" suaves. </p>
                 <p> -3 km de menor a mayor. </p>
-                <p> -5 km bajas pulsaciones. </p>
+                <p> -4 km bajas pulsaciones. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves mañana: 4 km calle lo más fuerte posible. </h3> 
-                <h3> Jueves tarde: 17 km trail Parque de Montaña.</h3>
+                <br> Jueves tarde: 13 km trail mixto, Parque de Montaña + Parque.</h3>
+                <p> -2 km fuertes por senderos bajos. </p>
+                <p> -4 km, 200m subida fuerte por Llorón adelante, bajada suave. </p>
+                <p> -4 km bajas pulsaciones. </p>
                 <p> -3 km fuertes. </p>
-                <p> -4 km ágiles. </p>
-                <p> -6 km, 15" fuertes x 15" suaves. </p>
-                <p> -4 km buenas sensaciones. </p>
             </div>                
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 20 km trail Arco.</h3>
+                <br> Viernes: 19 km trail Arco.</h3>
                 <p> -3 km ágiles. </p>
-                <p> -7 km bajas pulsaciones. </p>
-                <p> -4 km, 300m fuertes x 100m suaves. </p>
-                <p> -6 km mejor ritmo posible. </p>
+                <p> -6 km, 200m fuertes x 400m suaves. </p>
+                <p> -6 km buenas sensaciones. </p>
+                <p> -4 km sensaciones incómodas. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 23 km trail Arco.</h3>
-                <p> -3 km fuertes. </p>
-                <p> -2 km, 200m fuertes x 1' suaves. </p>
-                <p> -2 km, 300m ágiles x 1'30" suaves. </p>
-                <p> -10 km, 2.5 km tirando cada uno. </p>
-                <p> -6 km bajas pulsaciones. </p>
+                <br> Sábado: 28 km trail Arco.</h3>
+                <p> -4 km de menor a mayor, Arco, por calle. </p>
+                <p> -4 km, 800m fuertes x 400m suaves, filo del Santo Tomás. </p>
+                <p> -3 km bajada de menor a mayor. </p>
+                <p> -6 km, 5' subida fuerte por río seco x3' suaves. </p>
+                <p> -11 km buenas sensaciones bajada x Arco. </p>
             </div> 
         </div>
 
@@ -107,8 +107,8 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 24
-        <br>Objetivo semanal: Trabajar en sensaciones incómodas. </br>
+        <h4>SEMANA 26. SEMANA PRE CARRERA.
+        <br>Objetivo semanal: Buenas sensaciones. </br>
             </h4>   
         <p>Entrada en calor </p>   
         <p> 4 vueltas x 14 repeticiones </p>            
@@ -128,43 +128,42 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 15 km trail Parque de Montaña.</h3>
-                <p> -3 km ágiles. </p>
-                <p> -5 km, 20" fuertes x 20"suaves. </p>
-                <p> -7 km buenas sensaciones. </p>
+                <br> Lunes: 10 km calle.</h3>
+                <p> -2 km de menor a mayor. </p>
+                <p> -3 km fuertes. </p>
+                <p> -3 km, 20" fuertes x 20" suaves. </p>
+                <p> -2 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 2 
-                <br> Martes mañana: 5 km calle, calle en el mejor tiempo posible.</h3>
-                <h3> Martes tarde: 13 km trail Cricyt + Parque de Montaña (simulamos la salida). </h3>
-                <p> -2 km fuertes. </p>
-                <p> -2 km de mayor a menor. </p>
-                <p> -3 km suaves. </p>
-                <p> -6 km bajas pulsaciones. </p>
+                <br> Martes mañana: 5 km calle, en el mejor tiempo posible.</h3>
+                <h3> Martes tarde: 13 km trail mixto, Parque de Montaña.</h3>
+                <p> -3 km de mayor a menor x calle. </p>
+                <p> -3 km fuertes x senderos bajos. </p>
+                <p> -7 km buenas sensaciones mixto. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 10 km trail Arco. </h3> 
-                <p> -2 km fuertes. </p>
-                <p> -4 km a ritmos incómodos. </p>
-                <p> -4 km, 20" fuertes x 20" suaves. </p>
+                <br> Jueves: 13 km calle.</h3>
+                <p> -2 km de menor a mayor. </p>
+                <p> -4 km, 8 series x 500m fuertes x 1'30" pausa pasiva. </p>
+                <p> -4 km, 5 series x 800m de menor a mayor  x 2'30" pausa pasiva. </p>
+                <p> -3 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 22 km trail Arco.</h3>
-                <p> -3 km de menor a mayor. </p>
-                <p> -10 km bajas pusaciones. </p>
-                <p> -5 km suaves. </p>
-                <p> -4 km, 600m fuertes x 100m suaves. </p>
+                <br> Viernes: 11 km trail, Parque de Montaña.</h3>
+                <p> -3 km fuertes. </p>
+                <p> -4 km buenas sensaciones. </p>
+                <p> -4 km ágiles. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 26 km trail Arco + Santo Tomás + calle.</h3>
-                <p> -2 km suaves. </p>
-                <p> -4 km, 5' ágiles subiendo x 1' fuerte bajando. </p>
+                <br> Sábado: 14 km trail, Iglesia + Arco.</h3>
+                <p> -2 km fuertes, desde la Iglesia. </p>
+                <p> -4 km, 3' fuerte subiendo x 1' suave. </p>
                 <p> -3 km de menor a mayor. </p>
-                <p> -5 km bajas pulsaciones. </p>
-                <p> -6 km puesto a puerta 5 Dalvian, de menor a mayor. </p>
+                <p> -5 km ágiles. </p>
             </div> 
         </div>
 
