--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 28 km trail Arco.</h3>
+                <br> Sábado: 25 km trail Arco.</h3>
                 <p> -4 km de menor a mayor, Arco, por calle. </p>
                 <p> -4 km, 800m fuertes x 400m suaves, filo del Santo Tomás. </p>
                 <p> -3 km bajada de menor a mayor. </p>
                 <p> -6 km, 5' subida fuerte por río seco x3' suaves. </p>
-                <p> -11 km buenas sensaciones bajada x Arco. </p>
+                <p> -Puesto comida e hidratacion 2'. </p>
+                <p> -8 km buenas sensaciones bajada x Arco. </p>
             </div> 
         </div>
 
